--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> Match that Match!</h1>
     <div id="game - screen"> </div>
     <script src ="lib/p5.min.js"> </script>
-    <script src ="lib/p5.dom.min js"> </script>
+    <script src ="lib/p5.dom.min.js"> </script>
     <script src ="lib/p5.sound.min.js"> </script>
     <script src ="lib/p5.play.js"> </script>
     <script src ="script.js"> </script>
